# minecraft_resource_tree

./: Cargo.toml  README.md  logo.xcf  test.crtr
.github/workflows/: rust.yml
src/: lib.rs  main.rs  recipe_lookup.rs  recipes.rs  ui.rs
src/ui/: recipe.rs
src/ui/recipe/: builder.rs  displayer.rs  helpers.rs  layout_helpers.rs
src/ui/recipe/builder/: helpers.rs
